Collapse stops within legs  (#1419)
* hide intermediary stops and show via button

* fix dotted and solid lines

* extract partial template

* linter

* itinerary row step

* review feedback

* fix tests

--- a/apps/site/web/static/css/_buttons.scss
+++ b/apps/site/web/static/css/_buttons.scss
@@ -168,3 +168,21 @@
 .stop-btn {
   text-align: left;
 }
+
+%button-as-link {
+  background: transparent;
+  border: 0;
+  color: $brand-primary;
+  cursor: pointer;
+  display: inline-block;
+  filter: none;
+  margin: $space-16 0 $space-8;
+
+  &:focus {
+    outline: none;
+  }
+
+  &:hover {
+    text-decoration: none;
+  }
+}
