--- a/apps/site/web/static/css/_location-input.scss
+++ b/apps/site/web/static/css/_location-input.scss
@@ -40,21 +40,7 @@
 }
 
 .location-link {
-  background: transparent;
-  border: 0;
-  color: $brand-primary;
-  cursor: pointer;
-  display: inline-block;
-  filter: none;
-  margin: $space-16 0 $space-8;
-
-  &:focus {
-    outline: none;
-  }
-
-  &:hover {
-    text-decoration: none;
-  }
+  @extend %button-as-link;
 }
 
 .location-btn-invert {
